2024-03-29  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.21 released.

2024-02-28  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.20 released.

2024-01-31  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.19 released.

2023-12-27  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.18 released.

2023-11-28  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.17 released.

2023-10-31  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.16 released.

2023-09-29  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.15 released.

2023-08-31  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.14 released.

2023-07-31  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.13 released.

2023-06-30  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.12 released.

2023-05-31  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.11 released.

2023-04-28  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.10 released.

2023-03-31  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.9 released.

2023-02-28  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.8 released.

2023-01-31  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.7 released.

2022-12-29  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.6 released.

2022-11-22  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.5 released.

2022-07-20  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>

	* opensource COBOL 4J v1.0.4 released.
