@@ -53,9 +53,9 @@ dnf install -y java-21-amazon-corretto-devel gcc make bison flex automake autoco
 
 ### Install opensource COBOL 4J
 ```
-curl -L -o opensourcecobol4j-v1.0.21.tar.gz https://github.com/opensourcecobol/opensourcecobol4j/archive/refs/tags/v1.0.21.tar.gz
-tar zxvf opensourcecobol4j-v1.0.21.tar.gz
-cd opensourcecobol4j-1.0.21
+curl -L -o opensourcecobol4j-v1.0.22.tar.gz https://github.com/opensourcecobol/opensourcecobol4j/archive/refs/tags/v1.0.22.tar.gz
+tar zxvf opensourcecobol4j-v1.0.22.tar.gz
+cd opensourcecobol4j-1.0.22
 ./configure --prefix=/usr/
 make
 sudo make install
@@ -72,7 +72,7 @@ In order to check installations of older versions,
 The docker container for opensource COBOL 4J is available.
 
 ```bash
-docker pull opensourcecobol/opensourcecobol4j:1.0.21
+docker pull opensourcecobol/opensourcecobol4j:1.0.22
 ```
 
 Execute the following commands in order to run the "Hello World" COBOL program.
