@@ -1,3 +1,7 @@
+2024-04-30  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>
+
+	* opensource COBOL 4J v1.0.22 released.
+
 2024-03-29  OSS Consortium <ws-opensource-cobol-contact@osscons.jp>
 
 	* opensource COBOL 4J v1.0.21 released.
